hphp/hack/test/typecheck/interface_constructor_nonempty.php
<?hh
interface Foo {
  public function __construct() {}
}
